@@ -183,19 +183,19 @@ CB_FLAG (cb_flag_optional_file, 1, "optional-file",
 
 #if 0 /* deactivated + untranslated for now, inspect later */
 CB_FLAG (cb_mf_ibm_comp, 1, "ibmcomp",
-	  "  -fibmcomp              Handle COMP fields like Micro Focus IBMCOMP\n"
-	  "                         * binary-size: 1--8 & synchronized-clause: ignore")
+	  "  -fibmcomp             Handle COMP fields like Micro Focus IBMCOMP\n"
+	  "                        * binary-size: 1--8 & synchronized-clause: ignore")
 #endif
 
-CB_FLAG_ON (cb_listing_with_header, 1, "listing-header",
-	_("  -fno-theader           suppress all headers and output of compilation\n"
-	  "                         options from listing while keeping page breaks"))
+CB_FLAG_ON (cb_listing_with_header, 1, "theaders",
+	_("  -fno-theaders         suppress all headers and output of compilation\n"
+	  "                        options from listing while keeping page breaks"))
 
-CB_FLAG_ON (cb_listing_with_source, 1, "listing-source",
-	_("  -fno-tsource           suppress source from listing"))
+CB_FLAG_ON (cb_listing_with_source, 1, "tsource",
+	_("  -fno-tsource          suppress source from listing"))
 
-CB_FLAG_ON (cb_listing_with_messages, 1, "listing-messages",
-	_("  -fno-tmessages         suppress warning and error summary from listing"))
+CB_FLAG_ON (cb_listing_with_messages, 1, "tmessages",
+	_("  -fno-tmessages        suppress warning and error summary from listing"))
 
-CB_FLAG (cb_listing_symbols, 1, "listing-symbols",
-	_("  -ftsymbols             specify symbols in listing"))
+CB_FLAG (cb_listing_symbols, 1, "tsymbols",
+	_("  -ftsymbols            specify symbols in listing"))
